--- a/setup/config/i225-tx.config
+++ b/setup/config/i225-tx.config
@@ -1,6 +1,6 @@
-IFACE_MAC_ADDR="6c:b3:11:66:85:cd"
-IFACE_IP_ADDR="192.168.6.71"
-IFACE_BRC_ADDR="192.168.6.255"
+IFACE_MAC_ADDR="6c:b3:11:3d:55:17"
+IFACE_IP_ADDR="192.168.5.71"
+IFACE_BRC_ADDR="192.168.5.255"
 TX_Q_COUNT=4
 RX_Q_COUNT=4
 VLAN_STRIP_SUPPORT="NO"
@@ -9,8 +9,8 @@ IRQ_AFFINITY_FILE="setup/irq_affinity_4c_4TxRx.map"
 TAPRIO_MAP="0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0"
 TAPRIO_SCHED="sched-entry S 0F 500000"
 # for i210
-TAPRIO_FLAGS="flags 0x1 clockid CLOCK_TAI"
-# TAPRIO_FLAGS="flags 0x2"
+# TAPRIO_FLAGS="flags 0x1 clockid CLOCK_TAI"
+TAPRIO_FLAGS="flags 0x2"
 PTP_RX_Q=2
 ETF_Q=3
 ETF_DELTA=700000
