--- a/setup/config/i225-rx.config
+++ b/setup/config/i225-rx.config
@@ -1,6 +1,6 @@
-IFACE_MAC_ADDR="6c:b3:11:66:85:d1"
-IFACE_IP_ADDR="192.168.6.41"
-IFACE_BRC_ADDR="192.168.6.255"
+IFACE_MAC_ADDR="6c:b3:11:3d:53:a3"
+IFACE_IP_ADDR="192.168.5.41"
+IFACE_BRC_ADDR="192.168.5.255"
 TX_Q_COUNT=4
 RX_Q_COUNT=4
 VLAN_STRIP_SUPPORT="NO"
